# bloom

./: .gitignore  README.md  brightness-overlay.html  dock.html  index.html  package.json  settings.html  vite.config.ts  volume-overlay.html
.github/workflows/: release.yml
.mimocode/plans/: 1781367481917-quick-moon.md
src/: App.css  App.tsx  BrightnessOverlay.css  BrightnessOverlay.tsx  Dock.css  Dock.tsx  Settings.css  Settings.tsx  VolumeOverlay.css  VolumeOverlay.tsx  dock-main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  services.rs  state.rs  types.rs  utils.rs
