[package]
name = "bloom"
version = "2.3.0"
description = ""
authors = ["sehaz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_Com",
  "Media_Control",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Threading",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Wmi",
  "Win32_Storage_FileSystem",
  "Win32_System_Ole",
  "Storage_Streams",
  "Win32_System_Console",
  "Graphics_Imaging",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Dwm",
] }
base64 = "0.22"
tauri-plugin-autostart = "2.5.1"
window-vibrancy = "0.7.1"
wmi = "0.14"

